# magic-wormhole-zeroconf

./: Cargo.toml
examples/: cli.rs
src/: control.rs  key.rs  lib.rs  main.rs  service.rs  state.rs  zeroconf.rs
src/control/: message.rs  server.rs  service.rs
src/key/: device.rs  message.rs  sas.rs
