[package]
name = "magic-wormhole-zeroconf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-wormhole-mailbox = { path = "../magic-wormhole-mailbox-rs" }
zeroconf = "0.10.5"
once_cell = "1.15.0"
async-channel = "1.7.1"
async-std = { version = "1.12.0", features = [ "attributes" ] }
futures = "0.3.24"
socket2 = "0.4.7"
uuid = { version = "1.2.1", features = [ "v4" ] }