[package]
name = "magic-wormhole-zeroconf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-wormhole-mailbox = { path = "../magic-wormhole-mailbox-rs" }
zeroconf = "0.10.5"
once_cell = "1.15.0"
async-channel = "1.7.1"
async-std = { version = "1.12.0", features = [ "attributes" ] }
futures = "0.3.24"
socket2 = "0.4.7"
uuid = { version = "1.2.1", features = [ "v4" ] }
serde = "1.0.145"
serde_json = "1.0.85"
serde_derive = "1.0.145"
async-tungstenite = "0.17.2"
thiserror = "1.0.37"
parking_lot = "0.12.1"
sysinfo = "0.26.4"
url = "2.3.1"
hkdf = "0.12.3"
sha2 = "0.10.6"
ed25519-dalek = { version = "1.0.1", features = [ "serde" ] }
rand_07 = { package = "rand", version = "0.7.0" }
rand = "0.8.5"
hex = "0.4.3"
x25519-dalek = "2.0.0-pre.1"
chacha20poly1305 = "0.10.1"
async-broadcast = "0.4.1"
derive_more = "0.99.17"
zeroize = "1.5.7"
pretty_env_logger = "0.4.0"